--- a/TiltCodeManager/app/src/main/res/values/strings.xml
+++ b/TiltCodeManager/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">TiltCodeManager</string>
+    <string name="app_name">tiltcode</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="app_id">928478853864979</string>
     <string name="API_SERVER">http://175.126.62.216</string>
     <string name="privacy_policy_nomal">개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 </string>
     <string name="message_not_enough_data">누락된 항목이 있습니다.</string>
@@ -10,4 +11,14 @@
     <string name="message_no_id">아이디를 입력해주세요.</string>
     <string name="message_repeated_id">중복된 아이디입니다.</string>
     <string name="message_network_error">네트워크 에러가 발생하였습니다.</string>
+    <string name="message_session_invalid">세션이 유효하지 않습니다.</string>
+    <string name="message_not_allow_permission">허가되지 않은 접근입니다.</string>
+    <string name="message_success_logout">로그아웃되었습니다.</string>
+    <string name="message_same_name">이름이 일치합니다.</string>
+    <string name="message_same_passwd">비밀번호가 일치합니다.</string>
+    <string name="message_diff_name">이름이 일치하지 않습니다.</string>
+    <string name="message_diff_passwd">비밀번호가 일치하지 않습니다.</string>
+    <string name="message_success_change_name">이름 변경을 성공하였습니다.</string>
+    <string name="message_success_change_passwd">비밀번호 변경을 성공하였습니다.</string>
+    <string name="message_diff_current_passwd">현재 비밀번호가 올바르지 않습니다.</string>
 </resources>
