--- a/TiltCodeManager/app/src/main/res/values/strings.xml
+++ b/TiltCodeManager/app/src/main/res/values/strings.xml
@@ -21,4 +21,11 @@
     <string name="message_success_change_name">이름 변경을 성공하였습니다.</string>
     <string name="message_success_change_passwd">비밀번호 변경을 성공하였습니다.</string>
     <string name="message_diff_current_passwd">현재 비밀번호가 올바르지 않습니다.</string>
+
+    <string-array name="colors">
+        <item>Red</item>
+        <item>Green</item>
+        <item>Blue</item>
+    </string-array>
+
 </resources>
