intent -> lockscreen local push fixed

--- a/tiltcode/app/src/main/res/values/strings.xml
+++ b/tiltcode/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="message_success_change_name">이름 변경을 성공하였습니다.</string>
     <string name="message_success_change_passwd">비밀번호 변경을 성공하였습니다.</string>
     <string name="message_diff_current_passwd">현재 비밀번호가 올바르지 않습니다.</string>
+    <string name="message_already_new_version">이미 최신버전입니다.</string>
 
     <string name="version">0.1</string>
 </resources>
