--- a/TiltCodeManager/app/src/main/res/values/strings.xml
+++ b/TiltCodeManager/app/src/main/res/values/strings.xml
@@ -4,7 +4,72 @@
     <string name="action_settings">Settings</string>
     <string name="app_id">928478853864979</string>
     <string name="API_SERVER">http://175.126.62.216</string>
-    <string name="privacy_policy_nomal">개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 개인정보 보호정책으로 개인정보를 </string>
+    <string name="privacy_policy_nomal">"'틸팅'('www.tiltcode.com'이하 '틸트코드')은(는) 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다.
+
+'틸팅'('틸트코드') 은(는) 회사는 개인정보처리방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.
+
+○ 본 방침은부터 2015년 1월 1일부터 시행됩니다.
+
+1. 개인정보의 처리 목적 '틸팅'('www.tiltcode.com'이하 '틸트코드')은(는) 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다.
+
+가. 홈페이지 회원가입 및 관리
+회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 분쟁 조정을 위한 기록 보존 등을 목적으로 개인정보를 처리합니다.
+
+나. 재화 또는 서비스 제공
+서비스 제공 등을 목적으로 개인정보를 처리합니다.
+
+다. 마케팅 및 광고에의 활용
+신규 서비스(제품) 개발 및 맞춤 서비스 제공, 인구통계학적 특성에 따른 서비스 제공 및 광고 게재 등을 목적으로 개인정보를 처리합니다.
+
+
+
+2. 개인정보 파일 현황
+
+1. 개인정보 파일명 : 개인정보 처리
+- 개인정보 항목 : 비밀번호, 생년월일, 성별, 로그인ID, 휴대전화번호, 이름, 이메일, 쿠키, 접속 로그
+- 수집방법 : 서면양식, 생성정보 수집 툴을 통한 수집
+- 보유근거 : 서비스 제공
+- 보유기간 : 준영구
+- 관련법령 :
+
+
+
+3. 개인정보의 처리 및 보유 기간
+
+① '틸팅'('틸트코드')은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집시에 동의 받은 개인정보 보유,이용기간 내에서 개인정보를 처리,보유합니다.
+
+② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.
+
+1.'홈페이지 회원가입 및 관리'
+'홈페이지 회원가입 및 관리'와 관련한 개인정보는 수집.이용에 관한 동의일로부터'준영구'까지 위 이용목적을 위하여 보유.이용됩니다.
+-보유근거 : 서비스 제공
+-관련법령 :
+-예외사유 :
+
+
+
+4. 개인정보의 제3자 제공에 관한 사항
+
+① '틸팅'('www.tiltcode.com'이하 '틸트코드')은(는) 정보주체의 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.
+
+② '틸팅'('www.tiltcode.com')은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.
+
+
+
+5. 개인정보처리 위탁
+
+① '틸팅'('틸트코드')은(는) 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.
+
+1.
+- 위탁받는 자 (수탁자) :
+- 위탁하는 업무의 내용 :
+- 위탁기간 :
+
+
+② '틸팅'('www.tiltcode.com'이하 '틸트코드')은(는) 위탁계약 체결시 개인정보 보호법 제25조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.
+
+③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.
+</string>
     <string name="message_not_enough_data">누락된 항목이 있습니다.</string>
     <string name="message_not_match_account">일치하는 계정이 없습니다.</string>
     <string name="message_passwd_short">비밀번호는 8글자 이상이어야합니다.</string>
@@ -31,6 +96,7 @@
     <string name="message_register_low_point">포인트가 부족합니다.</string>
     <string name="message_register_error_tilt">올바르지 않은 tilt값입니다.</string>
     <string name="message_success_register">쿠폰 등록을 성공하였습니다.</string>
+    <string name="message_login_nomal">관리자계정으로 로그인해주세요.</string>
 
 
     <string-array name="couponType">
