--- a/TiltCodeManager/app/src/main/res/values/strings.xml
+++ b/TiltCodeManager/app/src/main/res/values/strings.xml
@@ -96,8 +96,11 @@
     <string name="message_register_low_point">포인트가 부족합니다.</string>
     <string name="message_register_error_tilt">올바르지 않은 tilt값입니다.</string>
     <string name="message_success_register">쿠폰 등록을 성공하였습니다.</string>
+    <string name="message_download_coupon_success">쿠폰을 다운로드받았습니다.</string>
+    <string name="message_download_coupon_fail">쿠폰을 다운받지 못하였습니다.</string>
     <string name="message_login_nomal">관리자계정으로 로그인해주세요.</string>
     <string name="message_success_purchase">포인트 적립에 성공하였습니다.</string>
+    <string name="message_success_delete">쿠폰 삭제에 성공했습니다.</string>
 
     <string-array name="couponType">
         <item>쿠폰타입을 선택해주세요.</item>
