--- a/tiltcode/app/src/main/res/values/strings.xml
+++ b/tiltcode/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name='app_name'>tiltcode</string>
+    <string name='app_name'>TiltCode</string>
     <string name='hello_world'>Hello world!</string>
     <string name='action_settings'>Settings</string>
     <string name='app_id'>928478853864979</string>
